# pysvc

./: .gitignore  pyproject.toml
src/: client_code.py
src/pysvc/: __init__.py  objects.py
